[package]
name = "opengraph"
version = "0.1.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"
homepage = "https://github.com/kumabook/opengraph"
repository = "https://github.com/kumabook/opengraph.git"
description = "Parses html and extracts Open Graph protocol markup"
keywords = ["opengraph"]
categories = []

[dependencies]
serde        = "*"
serde_derive = "*"
serde_json   = "*"
html5ever    = "*"
